<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/LinearLayoutMain"
            android:weightSum="1">

            <RelativeLayout
                android:background="#17283A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                tools:context=".Main"
                android:id="@+id/RelativeLayoutInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_weight"
                    android:id="@+id/LblPeso"
                    android:textColor="#FFFFFF"
                    tools:ignore="HardcodedText"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/TxtPeso"
                    android:textColor="#000000"
                    android:background="#FFFFFF"
                    android:padding="10dp"
                    android:layout_below="@+id/LblPeso"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/placeholder"
                    android:autofillHints="@string/placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_height"
                    android:id="@+id/LblAltura"
                    android:textColor="#FFFFFF"
                    tools:ignore="HardcodedText"
                    android:layout_marginTop="24dp"
                    android:layout_below="@+id/TxtPeso"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/TxtAltura"
                    android:textColor="#000000"
                    android:background="#FFFFFF"
                    android:padding="10dp"
                    android:layout_below="@+id/LblAltura"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/placeholder"
                    android:autofillHints="@string/placeholder" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_calculateBMI"
                    android:id="@+id/BtnCalcular"
                    android:layout_below="@+id/TxtAltura"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginEnd="24dp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:background="#14B6A5"
                    tools:ignore="HardcodedText"
                    android:layout_toStartOf="@+id/BtnLimpar"
                    android:layout_toLeftOf="@+id/BtnLimpar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear"
                    android:id="@+id/BtnLimpar"
                    android:layout_alignBottom="@+id/BtnCalcular"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:background="#C33126"
                    tools:ignore="HardcodedText"/>

            </RelativeLayout>

            <RelativeLayout
                android:background="#17283A"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:id="@+id/RelativeLayoutResult">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LblSituacao"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LblResultado"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="70dp"
                    android:layout_below="@+id/LblSituacao"
                    android:textSize="90sp"
                    android:textStyle="normal|bold" />

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="ca-app-pub-1749022888312040/4653916619">
                </com.google.android.gms.ads.AdView>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>